--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color:#184a5e ;
+    background: linear-gradient(200deg, #3e8b99, #0f3a42);
     opacity: 1; 
     z-index: -1;
   }
