--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -15,7 +15,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(200deg, #3e8b99, #0f3a42);
+    background-image: url("../assets/bg_2.jpg"); 
+    background-size: cover;
+    background-position: center;
     opacity: 1; 
     z-index: -1;
   }
