--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,23 +1,48 @@
-.about-us {
-    text-align: center;
-    background-image: url("../assets/bg_2.jpg"); 
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .about-us h1 {
-    color: #ffffff;
-    margin: 0;
-    padding-top: 25px;
-    font-size: 2rem;
-    text-align: center;
-  }
-  
-  .about-us p {
-    font-size: 1rem;
-    color: #ffffff;
-    max-width: 600px;
-    margin: 0 auto;
-    line-height: 1.6;
-    text-align: center;
-  }
+
+.about-section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+  margin-left: 5%;
+}
+
+.about-content {
+  width: 60%;
+}
+
+.about-content h1 {
+  color: black;
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.about-content p {
+  font-size: 16px;
+  color: #555;
+  line-height: 1.6;
+  margin-bottom: 15px;
+}
+
+.read-more-btn {
+  padding: 10px 20px;
+  background-color: #ffffff;
+  color: #1b96c7;
+  border: solid 1px ;
+  font-size: 15px;
+  font-weight: 800;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.about-images {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.image {
+  width: 100%;
+  border-radius: 10px;
+}
