--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,22 +5,23 @@
     justify-content: space-between;
     align-items: center;
     padding: 60px 40px;
-  
-  }
-  
-  .hero::before{
+}
+
+.hero::after {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../assets/bg_2.jpg"); 
+    background-image: url("../assets/about.jpg");
     background-size: cover;
     background-position: center;
-    opacity: 1; 
-    z-index: -1;
-  }
+    background-repeat: no-repeat;
+    background-color: rgba(59, 111, 134, 0.904);
+    background-blend-mode: overlay; 
+    z-index: -1; 
+}
   
   .hero-left {
     margin-left: auto;
@@ -74,8 +75,8 @@
   
  
   .translation-form {
-    width: 400px;
-    background: rgba(255, 255, 255, 0.8);
+    width: 500px;
+    background: rgba(119, 180, 196, 0.692);
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -84,15 +85,15 @@
   
   .translation-form h2 {
     margin-bottom: 30px;
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-align: center;
-    color: #333;
+    color: #ebe85d;
   }
   
   .translation-form p {
     margin-bottom: 30px;
     padding-bottom: 5px;
-    color: #3b3b3a;
+    color: #ffffff;
   }
   
   .dropdown,
