--- a/src/styles/PricingCard.css
+++ b/src/styles/PricingCard.css
@@ -1,17 +1,17 @@
 .pricing-card {
     border: 1px solid #000000;
-    padding: 1.5rem;
+    padding: 2rem;
     border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.8);
-    width: 300px;
-    margin: 1rem;
+    background-color: rgb(255, 255, 255);
+    width: 400px;
+    margin: 6rem;
     text-align: left;
     transition: transform 0.3s ease;
   }
 
   .pricing-card:hover {
     transform: scale(1.05); 
-    
+    background-color: rgb(107, 193, 214);
   }
   
   
@@ -31,8 +31,8 @@
   .pricing-card ul {
     list-style-type: square;
     padding: 2px;
-    margin: 2px;
     color: #000000;
+    margin-left: 20%;
 
   }
   
@@ -49,7 +49,9 @@
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease, transform 0.1s ease;
-    margin-left: 25%;
+    width: 200px;
+    margin-top: 15%;
+    margin-left: 20%;
   }
 
   .pricing-card button:active {
