--- a/src/styles/PricingSection.css
+++ b/src/styles/PricingSection.css
@@ -1,8 +1,7 @@
 .pricing-section {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    padding: 2rem 0;
-    margin-top: 1px;
-
-  }
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem 0;
+  margin-top: 2rem;
+}
