--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -22,8 +22,9 @@
 }
 
 .footer-logo h3 {
-  color: rgb(255, 187, 0);
+  color: rgb(255, 255, 255);
   margin-bottom: 10px;
+  font-size: 1.5rem;
 }
 
 .footer-logo p {
@@ -42,20 +43,21 @@
 .footer-menu h4,
 .footer-services h4,
 .footer-contact h4 {
-  color: rgb(255, 187, 0);
+  color: rgb(255, 255, 255);
   margin-bottom: 10px;
+  font-size: 1.5rem;
 }
 
 .footer-menu ul,
 .footer-services ul {
   list-style: none;
-  padding: 0;
+  padding-bottom: 10px;
 }
 
 .footer-menu li,
 .footer-services li {
   font-size: 14px;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   cursor: pointer;
 }
 
