--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,57 +8,56 @@
     
 }
 
-:root {
-	--mainColor: #37688a;
-	--mainColorLight: #5767aa;
-	--secondaryColor: rgb(255, 187, 0);
-	--textColor: #eee;
-}
-
-
 header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	height: 80px;
 	padding: 0 2rem;
-	background-color: var(--mainColor);
-	color: var(--textColor);
+	background-color: #5e98a0;
+	color: #eee;
 	position: relative;
 	z-index: 10;
 	
+}
+
+
+.logo{
+	padding: 5px 50px;
+	font-size: 1.5rem;
+	font-weight: bold;
 }
 
 nav {
 	display: flex;
 	align-items: center;
 	gap: 1.5rem;
+	padding: 5px 50px;
+	
 }
 
 nav a {
 	margin: 0 1rem;
-	color: var(--textColor);
+	color: #eee;
 	text-decoration: none;
 	font-size: 1.2rem;
 	font-weight:500;
 }
 
 nav a:hover {
-	color: var(--secondaryColor);
+	color: rgb(255, 187, 0);
 }
 
-nav .language-select {
+nav .translate-button {
 	padding: 5px 10px;
 	font-size: 1rem;
 	border-radius: 5px;
-	border: none;
+	border: solid 1px black;
 	outline: none;
-	background-color: var(--textColor);
-	color: var(--mainColor);
 	cursor: pointer;
 }
 
-nav .language-select:hover{
+nav .translate-button:hover{
 	color: rgb(255, 187, 0);
 }
 
@@ -68,7 +67,7 @@ header .nav-btn {
 	background: transparent;
 	border: none;
 	outline: none;
-	color: var(--textColor);
+	color: #eee;
 	font-size: 1.8rem;
 	display: none;
 }
@@ -79,11 +78,68 @@ nav .nav-close-btn {
 	right: 20px;
 	font-size: 1.8rem;
 	background: none;
-	color: var(--textColor);
+	color: #eee;
 	border: none;
 	cursor: pointer;
 }
 
+
+.top-bar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #ffffff;
+	padding: 5px 80px;
+	font-size: 14px;
+	color: black;
+}
+
+.top-bar-left {
+	margin-right: 10px;
+	color: black;
+	text-decoration: none;
+	font-size: 1.2rem;
+}
+
+.social{
+	color: black;
+	display: flex;
+	gap: 30px;
+}
+
+.top-bar-right{
+	display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.top-bar-right span {
+	margin-right: 20px;
+}
+
+.top-bar-right .language-select {
+	padding: 5px 10px;
+	font-size: 1rem;
+	border-radius: 5px;
+	outline: none;
+	cursor: pointer;
+}
+
+
+.translate-btn {
+	background-color: rgb(255, 187, 0);
+	padding: 8px 15px;
+	border: none;
+	color: #37688a;;
+	text-decoration: none;
+	border-radius: 4px;
+	font-weight: bold;
+	margin-left: auto;
+}
+
+.translate-btn:hover {
+	background-color: rgb(255, 170, 0);
+}
 
 @media only screen and (max-width: 1024px) {
 	header .nav-btn {
@@ -96,7 +152,7 @@ nav .nav-close-btn {
 		left: 0;
 		height: 100%;
 		width: 100%;
-		background-color: var(--mainColor);
+		background-color: #37688a;;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
