--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -21,7 +21,6 @@ header {
 	
 }
 
-
 .logo{
 	padding: 5px 50px;
 	font-size: 1.5rem;
@@ -52,9 +51,10 @@ nav .translate-button {
 	padding: 5px 10px;
 	font-size: 1rem;
 	border-radius: 5px;
-	border: solid 1px black;
+	border: solid 2px #5e98a0;
 	outline: none;
 	cursor: pointer;
+	font-weight: 500;
 }
 
 nav .translate-button:hover{
@@ -125,21 +125,6 @@ nav .nav-close-btn {
 	cursor: pointer;
 }
 
-
-.translate-btn {
-	background-color: rgb(255, 187, 0);
-	padding: 8px 15px;
-	border: none;
-	color: #37688a;;
-	text-decoration: none;
-	border-radius: 4px;
-	font-weight: bold;
-	margin-left: auto;
-}
-
-.translate-btn:hover {
-	background-color: rgb(255, 170, 0);
-}
 
 @media only screen and (max-width: 1024px) {
 	header .nav-btn {
