--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -25,6 +25,7 @@ header {
 	padding: 5px 50px;
 	font-size: 1.5rem;
 	font-weight: bold;
+	cursor: pointer;
 }
 
 nav {
@@ -105,6 +106,7 @@ nav .nav-close-btn {
 	color: black;
 	display: flex;
 	gap: 30px;
+	cursor: pointer;
 }
 
 .top-bar-right{
@@ -115,6 +117,7 @@ nav .nav-close-btn {
 
 .top-bar-right span {
 	margin-right: 20px;
+	cursor:pointer;
 }
 
 .top-bar-right .language-select {
