--- a/src/styles/WhyChooseUs.css
+++ b/src/styles/WhyChooseUs.css
@@ -15,10 +15,14 @@
   }
   
   .section-header p {
+    text-align: center;
     font-size: 16px;
     color: #555;
     line-height: 1.6;
     margin-bottom: 40px;
+    margin-left: 60px;
+    margin-right: 60px;
+    
   }
   
   .content {
@@ -35,6 +39,7 @@
   }
   
   .image-section img {
+    display: block;
     width: 500px;
     border-radius: 10px;
   }
