--- a/src/styles/FeatureCard.css
+++ b/src/styles/FeatureCard.css
@@ -2,7 +2,7 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    text-align: left;
     transition: transform 0.3s ease;
     margin: 5px;
   }
