--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -32,8 +32,7 @@ nav {
 	display: flex;
 	align-items: center;
 	gap: 1.5rem;
-	padding: 5px 50px;
-	
+	padding: 5px 50px;	
 }
 
 nav a {
@@ -52,7 +51,7 @@ nav .translate-button {
 	padding: 5px 10px;
 	font-size: 1rem;
 	border-radius: 5px;
-	border: solid 2px #5e98a0;
+	border: solid 2px #8fd2db;
 	outline: none;
 	cursor: pointer;
 	font-weight: 500;
@@ -83,8 +82,6 @@ nav .nav-close-btn {
 	border: none;
 	cursor: pointer;
 }
-
-
 .top-bar {
 	display: flex;
 	justify-content: space-between;
