--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -107,7 +107,7 @@
   .input label {
     margin-bottom: 5px;
     font-size: 1rem;
-    color: #000000;
+    color: #ffffff;
   }
   
   .dropdown select,
