--- a/src/styles/ServiceCard.css
+++ b/src/styles/ServiceCard.css
@@ -55,14 +55,13 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    
+    gap: 50px;
+ 
 }
 
 .service-image {
     width: 100%; 
-    max-width: 600px; 
-    height: auto;
+    max-width: 700px; 
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     object-fit: cover; 
@@ -109,7 +108,7 @@
     color: #666;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .services-container {
         flex-direction: column;
         gap: 20px;
@@ -166,4 +165,4 @@
     .service-image {
         max-width: 200px; 
     }
-}
+} */
