--- a/src/styles/WhyChooseUs.css
+++ b/src/styles/WhyChooseUs.css
@@ -44,7 +44,8 @@
     display:flex;
     flex-direction: row;
     width: 600px;
-    border-radius: 10px;
+    height: 400px;
+    border-radius: 0 0 100px 0;
   }
 
   
