--- a/src/styles/ServiceCard.css
+++ b/src/styles/ServiceCard.css
@@ -59,13 +59,29 @@
  
 }
 
-.service-image {
+.images-section img {
+    flex: 1;
+    height: auto;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.service-image-1 {
     width: 100%; 
     max-width: 700px; 
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    object-fit: cover; 
     margin-left: 100px;
+    border-radius: 20px 20px 100px 20px;
+}
+
+.service-image-2 {
+    width: 100%; 
+    max-width: 700px; 
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    margin-left: 100px;
+    border-radius: 100px 20px 20px 20px;
 }
 
 .services-list {
@@ -74,15 +90,19 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .service-card {
-    background: #c1dadd;
+    display: flex;
+    align-items: flex-start; 
+    background: #cae4e7;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    height: 150px;
 }
 
 .service-card:hover {
@@ -90,25 +110,43 @@
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.15);
 }
 
-.service-card .icon {
-    font-size: 2rem;
-    color: #0858ec;
-    margin-bottom: 10px;
+.icon {
+    font-size: 24px;
+    color: #2a5d7c;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    
 }
 
+.text-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;  
+  }
+  
 .service-card h3 {
-    font-size: 1.25rem;
-    font-weight: 700;
-    margin-bottom: 10px;
-    color: #333;
+    margin: 0;
+    font-size: 24px;
+    color: #2a5d7c;
 }
 
 .service-card p {
-    font-size: 1rem;
-    color: #666;
+    margin: 5px 0 0;
+  font-size: 14px;
+  color: #323233;
 }
 
-/* @media (max-width: 768px) {
+.service-card::after {
+    content: '›';
+    font-size: 20px;
+    color: #2a5d7c;
+    margin-left: auto;
+    font-weight: bold;
+}
+  
+
+@media (max-width: 768px) {
     .services-container {
         flex-direction: column;
         gap: 20px;
@@ -165,4 +203,4 @@
     .service-image {
         max-width: 200px; 
     }
-} */
+}
